--- a/pipeline/jobs/terraform-plan.yaml
+++ b/pipeline/jobs/terraform-plan.yaml
@@ -11,6 +11,10 @@ jobs:
   pool:
     vmImage: 'ubuntu-18.04'
   steps:
+  - template: ../steps/replace-token.yaml
+    parameters:
+      path: '**/*-policy.xml'
+      environment: ${{ parameters.environment }}
   - template: ../steps/tf-install.yaml
   - template: ../steps/tf-init.yaml
     parameters:
