--- a/pipeline/steps/tf-plan.yaml
+++ b/pipeline/steps/tf-plan.yaml
@@ -9,7 +9,7 @@ steps:
     command: plan
     workingDirectory: $(System.DefaultWorkingDirectory)/infrastructure/terraform/
     environmentServiceName: ${{ parameters.subscription }}
-    commandOptions: '-var-file="environment/$(environment)-pip.tfvars" -var-file="environment/shared.tfvars" -out="tfplan-$(environment).tfplan" -var "tenant_id=$(tenant_id)" -var "sp_object_id=$(sp_object_id)" -var "prefix=$(prefix)" -var "product=$(product)" -var "environment=$(environment)" -var "location=$(location)" -var "builtFrom=$(Build.Repository.Name)'
+    commandOptions: '-var-file="environment/$(environment)-pip.tfvars" -var-file="environment/shared.tfvars" -out="tfplan-$(environment).tfplan" -var "prefix=$(prefix)" -var "product=$(product)" -var "environment=$(environment)" -var "location=$(location)" -var "builtFrom=$(Build.Repository.Name)'
 
 - publish: $(System.DefaultWorkingDirectory)/infrastructure/terraform/tfplan-$(environment).tfplan
   artifact: tfplan-$(environment).tfplan
